Fix header alignment

--- a/sass/site/header/_header-menu.scss
+++ b/sass/site/header/_header-menu.scss
@@ -1,6 +1,6 @@
 .main-navigation {
   display: block;
-
+  margin: auto;
   font-weight: 400;
   clear: left;
   padding-right: 5%;
